--- a/gradle.properties
+++ b/gradle.properties
@@ -3,5 +3,6 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 mc_version=1.17.1
-forge_version=37.0.34
-jei_version=1.16.5:7.7.1.118
+forge_version=37.0.107
+mod_version=2.5.3
+jei_version=1.17.1:8.2.0.34
