--- a/gradle.properties
+++ b/gradle.properties
@@ -3,5 +3,6 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 mc_version=1.16.5
-forge_version=36.2.8
-jei_version=1.16.5:7.7.1.126
+forge_version=36.2.19
+mod_version=2.4.4
+jei_version=1.16.5:7.7.1.137
