--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,6 +1,7 @@
 modLoader="javafml"
 loaderVersion="[37,)"
 license="LGPL-2.1"
+issueTrackerURL="https://github.com/Sajeyson/Witherproofed/tree/1.17.1"
 
 [[mods]]
 modId="witherproofed"
@@ -9,8 +10,7 @@ displayName="Witherproofed"
 logoFile="icon.png"
 authors="Sajeyson"
 credits="Mojang Studios, Forge Team"
-description='Adds Heavy Reinforced Blocks to make wither farms'
-issueTrackerURL="https://github.com/Sajeyson/Witherproofed"
+description='Adds Heavy Reinforced Blocks to make wither farms.'
 displayURL="https://www.curseforge.com/minecraft/mc-mods/witherproofed"
 
 [[dependencies.witherproofed]]
