--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
-mc_version=1.18.2
-forge_version=40.1.68
-mod_version=2.6.1
-jei_version=1.18.2:9.7.0.209
+mc_version=1.19
+forge_version=41.1.0
+mod_version=2.7
+jei_version=1.19-forge:11.1.0.235
