--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,9 @@
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
-mc_version=1.19
-forge_version=41.1.0
-mod_version=2.7
-jei_version=1.19-forge:11.1.0.235
+mc_version=1.19.1
+forge_version=42.0.1
+mod_version=2.7.1
+jei_version=1.19.1-forge:11.2.0.241
+catalogue_version_id=3873264
+ctm_version_id=3737369
