--- a/gradle.properties
+++ b/gradle.properties
@@ -5,4 +5,6 @@ org.gradle.daemon=false
 mc_version=1.18.2
 forge_version=40.1.68
 mod_version=2.6.1
-jei_version=1.18.2:9.7.0.209
+jei_version=1.18.2:9.7.1.232
+catalogue_version_id=3803098
+ctm_version_id=3737369
